--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@preact/signals-react": "^3.0.1",
+    "@radix-ui/react-navigation-menu": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.1",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "ethers": "^6.13.5",
-    "lucide-react": "^0.471.0",
+    "lucide-react": "^0.471.1",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "thirdweb": "^5.83.1",
     "zustand": "^5.0.3"
   },
