--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 
 *.py
 
+*.png
+*.jpg
+*.jpeg
+*.PNG
+*.JPG
+*.JPEG
 
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
